syntax = "proto3";

package grpcProject;

option go_package = "../pb";


import "keyboard_message.proto";
import "memory_message.proto";
import "processor_message.proto";
import "storage_message.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  repeated GPU gpus = 5;
  repeated Storage storages = 6;
  Keyboard keyboard = 7;
  Memory ram = 8;
  float price_usd = 9;
  uint32 release_year = 10;
  oneof weight {
    float weight_kg = 13;
    float weight_lb = 14;
  }
}